# ULTRA

./: .gitignore  .pre-commit-config.yaml  README.md  STEP1_build_ultra_binary_data.sh  STEP1_build_ultra_binary_data_BORDEAUX.sh  STEP1_build_ultra_binary_data_IDF.sh  STEP2_ultra_preprocess.sh  STEP2_ultra_preprocess_on_BORDEAUX.sh  STEP2_ultra_preprocess_on_IDF.sh  STEP2_ultra_preprocess_on_SWITZERLAND.sh  STEP3_run_server.sh  STEP3_run_server_BORDEAUX.sh  STEP3_run_server_IDF.sh  analyze_binary.sh  build_and_run_ULTRA_binaries.sh  build_raptor_binary.sh  build_raptor_binary_BORDEAUX.sh  build_transfer_graph.sh  build_ultra_binary_data_BORDEAUX.sh  build_ultra_binary_data_IDF.sh  check_gtfs.sh  convert_gtfs.sh  download_KIT_data.sh  my_custom_build.sh  run_server.sh  ultra_on_BORDEAUX.sh  ultra_on_IDF.sh  ultra_on_bordeaux.sh  ultra_preprocess_on_BORDEAUX.sh  ultra_preprocess_on_IDF.sh  ultra_preprocess_on_SWITZERLAND.sh  use_parent_stations.py
Algorithms/CH/Preprocessing/: KeyFunction.h  StopCriterion.h
Algorithms/CH/Query/: BucketQuery.h  CHQuery.h
Algorithms/RAPTOR/: ULTRARAPTOR.h
Analyzer/: CMakeLists.txt  binary-analyzer.cpp  conanprofile.txt
Custom/: exceptions.h  gtfs.h  gtfs_processing.cpp  gtfs_processing.h  gtfs_to_binary.h  gtfs_to_ultra_binary.cpp  gtfs_to_ultra_binary.h  journey.h  json.h  legs.h  prepare_gtfs.cpp  prepare_gtfs.h  transfer_graph.cpp  transfer_graph.h
Custom/Common/: geojson.h  graphtypes.h  polygon.cpp  polygon.h  stopmap.h  types.h
Custom/Dumping/: duration_helper.h  geojson.cpp  json_helper.cpp  json_helper.h
Custom/Graph/: extending_with_stops.cpp  extending_with_stops.h  graph.cpp  graph.h  osmparsing.cpp  osmparsing.h
Custom/Handlers/: echo_handler.cpp  echo_handler.h  exceptions.h  journey_handler.cpp  journey_handler.h
Custom/Parsing/: geojson_stops.cpp  geojson_stops.h  gtfs_stops.h  polygonfile.cpp  polygonfile.h  stopfile.cpp  stopfile.h
Custom/Preprocess/: gtfs_processing.cpp  gtfs_processing.h  transfer_graph.cpp  transfer_graph.h  ultra_gtfs_data.cpp  ultra_gtfs_data.h
Custom/Preprocess/Graph/: extending_with_stops.cpp  extending_with_stops.h  graph.h  osmparsing.cpp  osmparsing.h
Custom/Preprocess/Parsing/: geojson_stops.h  gtfs_stops.cpp  gtfs_stops.h  polygonfile.h
Custom/Server/: journey.h  json_helper.cpp  json_helper.h
Custom/Server/Handlers/: journey_handler.cpp  journey_handler.h
Custom/Server/Snapping/: snapping.cpp  snapping.h
Custom/Snapping/: snapping.cpp  snapping.h
DataStructures/CSA/Entities/: Connection.h  Stop.h  Trip.h
DataStructures/Graph/Classes/: StaticGraph.h
DataStructures/RAPTOR/: Data.h
Helpers/: Helpers.h  MultiThreading.h  Types.h
Helpers/String/: Enumeration.h  String.h
Investigations/: CMakeLists.txt  binary-analyzer.cmake  binary-analyzer.cpp  bordeaux-data-gtfs.cmake  bordeaux-data-osm.cmake  bordeaux-data.cmake  build-raptor-binary.cmake  build-raptor-binary.cpp  build-transfer-graph.cmake  build-transfer-graph.cpp  build-ultra-binary-data.cmake  build-ultra-binary-data.cpp  conanfile.txt  conanprofile.txt  converter.cmake  converter.cpp  cppgtfs.cmake  dummy.cmake  dummy.cpp  gtfs-checker.cmake  gtfs-checker.cpp  idf-data-osm.cmake  server.cmake  server.cpp
MyCustomUsage/: CMakeLists.txt  idf-data-gtfs.cmake
MyCustomUsage/Common/: CMakeLists.txt  geojson.h  polygon.cpp  types.h
MyCustomUsage/Mains/: CMakeLists.txt
MyCustomUsage/Mains/BuildPreparatory/: build-preparatory.cpp
MyCustomUsage/Mains/BuildUltraBinaryData/: CMakeLists.txt  build-ultra-binary-data.cpp
MyCustomUsage/Mains/Dummy/: dummy.cpp
MyCustomUsage/Mains/DummyPreprocess/: CMakeLists.txt  dummypreprocess.cpp
MyCustomUsage/Mains/Server/: CMakeLists.txt  server.cpp
MyCustomUsage/MutualizedPreprocess/: CMakeLists.txt  autodeletefile.h  graphtypes.h  polygon.h
MyCustomUsage/MutualizedPreprocess/Graph/: CMakeLists.txt  extending_with_stops.cpp  extending_with_stops.h  geojson.cpp  geojson.h  graph.cpp  graph.h  graphtypes.h  osmparsing.cpp  osmparsing.h  polygon.cpp  polygonfile.cpp  polygonfile.h  walking_graph.cpp  walking_graph.h
MyCustomUsage/MutualizedPreprocess/GtfsParsing/: gtfs_geojson.cpp  gtfs_parsed_data.cpp  gtfs_parsed_data.h  gtfs_parsing_structures.cpp  gtfs_parsing_structures.h
MyCustomUsage/MutualizedPreprocess/Parsing/: polygonfile.h
MyCustomUsage/Preprocess/: CMakeLists.txt  gtfs_parsed_data.cpp  gtfs_parsed_data.h  gtfs_processing.cpp  gtfs_processing.h  route_label.cpp  route_label.h  transfer_graph.cpp  transfer_graph.h  ultra_gtfs_data.cpp  ultra_gtfs_data.h  ultra_transfer_data.cpp  ultra_transfer_data.h
MyCustomUsage/Preprocess/Graph/: extending_with_stops.h  graph.cpp  graph.h  osmparsing.h  walking_graph.cpp  walking_graph.h
MyCustomUsage/Preprocess/GtfsParsing/: CMakeLists.txt  gtfs_parsed_data.cpp  gtfs_parsed_data.h  gtfs_parsing_structures.cpp  gtfs_parsing_structures.h  route_label.h
MyCustomUsage/Preprocess/Parsing/: gtfs_stops.h  polygonfile.cpp  polygonfile.h
MyCustomUsage/Scripts/: remove_invalid_transfers.py
MyCustomUsage/Scripts/analyze_gtfs/: check_stop_times_departure_equals_arrival.py  list_trips_joining_stops.py
MyCustomUsage/Server/: CMakeLists.txt  duration_helper.h  exceptions.h  journey.h  json_helper.cpp  json_helper.h  legs.h  stopmap.h
MyCustomUsage/Server/Handlers/: echo_handler.cpp  echo_handler.h  exceptions.h  journey_handler.cpp  journey_handler.h
MyCustomUsage/Server/Snapping/: snapping.cpp  snapping.h
MyCustomUsage/Static/viewer/: geojson.js  main.js  map.js  markers.js  response_parsing.js  styles.css  url.js
MyCustomUsage/Static/viewer/controls/: info.js  init.js  inputs.js
MyCustomUsage/Static/viewer/helpers/: datetime_helper.js  url.js
Runnables/: Makefile
Static/viewer/: index.html  main.js  map.js  markers.js
Static/viewer/controls/: info.js  inputs.js
Static/viewer/helpers/: location_helper.js
data/: bordeaux_polygon_TEST.geojson
